--- a/examples/variables.css
+++ b/examples/variables.css
@@ -1,10 +1,10 @@
 
 @main-color: #00C3FF
-@width: 800px
+@main-width: 800px
 
 body
   font 12px Arial
   color @main-color
 
 #wrapper
-  width @width
+  width @main-width
