--- a/examples/arithmetic.css
+++ b/examples/arithmetic.css
@@ -9,7 +9,8 @@ h1
   font-size 2 * @size
 
 h2
-  font-size @size - 2px
+  font-size @size - 2px 5px + 3
   line-height @size / 2
   foo 2px * 4 + 5
-  bar 5 + 5
+  foo 2px * (4 + 5)
+  bar 5.5 + 5.99
