--- a/examples/arithmetic.css
+++ b/examples/arithmetic.css
@@ -1,6 +1,7 @@
 
 @base: 5px
 @size: 22px + @base
+@string: "bar"
 
 body
   font 10px - 2 * 2 "Lucida Grand", Arial, sans-serif
@@ -13,4 +14,5 @@ h2
   line-height @size / 2
   foo 2px * 4 + 5
   foo 2px * (1 + (4 + 5) + 2 + 3)
-  bar 5.5 + 5.99
+  foo 5.5 + 5.99
+  foo 'foo ' + @string
