Color operations and clamping

--- a/examples/arithmetic.css
+++ b/examples/arithmetic.css
@@ -15,4 +15,4 @@ h2
   foo 2px * 4 + 5
   foo 2px * (1 + (4 + 5) + 2 + 3)
   foo 5.5 + 5.99
-  foo (#000 + #fff)
+  foo rgba(5,5,5,0.5) / rgba(2,2,2,1)
