--- a/examples/arithmetic.css
+++ b/examples/arithmetic.css
@@ -2,6 +2,7 @@
 @base: 5px
 @size: 22px + @base
 @string: "bar"
+@color: #ffcc00 - #ff0000
 
 body
   font 10px - 2 * 2 "Lucida Grand", Arial, sans-serif
@@ -15,4 +16,6 @@ h2
   foo 2px * 4 + 5
   foo 2px * (1 + (4 + 5) + 2 + 3)
   foo 5.5 + 5.99
-  foo rgba(5,5,5,0.5) / rgba(2,2,2,1)
+  foo rgba(5,5,5,0.5) + rgba(200,200,200,0.5)
+  foo (#ffcc00 - #ff0000) - @color
+  foo @color
