--- a/examples/functions.css
+++ b/examples/functions.css
@@ -1,8 +1,19 @@
 
+@blue: #00C3FF
+
+@pad(@x, @y)
+  padding @y @x @y @x
+
 @border-radius(@size)
   -webkit-border-radius @size
   -moz-border-radius @size
   border-radius @size
 
-form
-  @border-radius(5px)
+@lighten(@color)
+  background @color - rgba(0,0,0,0.5)
+
+form input
+  @size: 5px
+  @lighten(#fff)
+  @border-radius(@size)
+  @pad(@size, @size * 2)
