--- a/examples/comments.css
+++ b/examples/comments.css
@@ -3,6 +3,8 @@
 body
   color white
   // You can nest them as you wish
+  // and have more comments
+  // and more!
 
 /*
 We can also use multi-line comments
