--- a/examples/functions.css
+++ b/examples/functions.css
@@ -16,6 +16,6 @@ lighten(@color)
 
 form input
   @size: 5px
-  @lighten(#fff)
-  @border-radius(@size)
-  @pad(@size, @size * 2)
+  lighten(#fff)
+  border-radius(@size)
+  pad(@size, @size * 2)
