--- a/examples/functions.css
+++ b/examples/functions.css
@@ -1,6 +1,9 @@
 
 @blue: #00C3FF
 
+bg(@color: white)
+  background @color
+
 pad(@x, @y)
   padding @y @x @y @x
 
@@ -17,3 +20,9 @@ form input
   background lighten(#fff)
   border-radius(@size)
   pad(@size, @size * 2)
+
+a
+  bg()
+
+a.button
+  bg(red)
