Added rgb(hsl) support

--- a/examples/builtins.css
+++ b/examples/builtins.css
@@ -34,3 +34,5 @@ body
   color rgb(rgba(255,100,0,0.5))
   color rgb(#ff6633)
   color hsl(#ffcc00)
+  color rgb(#fc0)
+  color rgb(hsl(15deg,100%,60%))
