Added rgba(hsl) support

--- a/examples/builtins.css
+++ b/examples/builtins.css
@@ -35,4 +35,5 @@ body
   color rgb(#ff6633)
   color hsl(#ffcc00)
   color rgb(#fc0)
+  color rgba(hsl(15deg,100%,60%),0.5)
   color rgb(hsl(15deg,100%,60%))
