--- a/examples/builtins.css
+++ b/examples/builtins.css
@@ -38,3 +38,5 @@ body
   color rgb(#fc0)
   color rgba(hsl(15deg,100%,60%),0.5)
   color rgb(hsl(15deg,100%,60%))
+  foo unquote("sans-serif")
+  foo unquote(sans-serif)
