--- a/examples/builtins.css
+++ b/examples/builtins.css
@@ -40,3 +40,6 @@ body
   color rgb(hsl(15deg,100%,60%))
   foo unquote("sans-serif")
   foo unquote(sans-serif)
+  
+  background url("/images/test.png")
+  background url(/images/some image.png)
