--- a/examples/functions.css
+++ b/examples/functions.css
@@ -1,7 +1,7 @@
 
-@blue: #00C3FF
+@blue = #00C3FF
 
-bg(@color: white)
+bg(@color = white)
   background @color
 
 pad(@x, @y)
@@ -16,7 +16,7 @@ lighten(@color)
   @color - rgba(0,0,0,0.5)
 
 form input
-  @size: 5px
+  @size = 5px
   background lighten(#fff)
   border-radius(@size)
   pad(@size, @size * 2)
