--- a/test/integration/tests/functions.multiple-calls.css
+++ b/test/integration/tests/functions.multiple-calls.css
@@ -5,3 +5,9 @@ body {
   padding: 1px;
   padding: 100px;
 }
+form {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
