builtins example working

--- a/examples/builtins.styl
+++ b/examples/builtins.styl
@@ -1,10 +1,10 @@
 
 body
-  @a = 0.5
-  color rgba(0,0,255,@a)
+  a = 0.5
+  color rgba(0,0,255,a)
   
-  @b = 100
-  color rgb(200,100,@b)
+  b = 100
+  color rgb(200,100,b)
   
   foo red(red)
   foo red(green)
