Fixed variables example

--- a/examples/variables.styl
+++ b/examples/variables.styl
@@ -1,16 +1,16 @@
 
-@font-families = "Lucida Grande", Arial
-@main-width = 80%
-@main-color = #fff
-@sidebar-width = @main-width
+font-families = "Lucida Grande", Arial
+main-width = 80%
+main-color = #fff
+sidebar-width = main-width / 2
 
 body
-  @size = 12px
-  font @size @font-families, sans-serif
-  color @main-color
+  size = 12px
+  font size font-families, sans-serif
+  color main-color
 
 #wrapper
-  width @main-width
+  width main-width
 
 .sidebar
-  width @sidebar-width
+  width sidebar-width
