Renamed property-functions example

--- a/examples/functions.styl
+++ b/examples/functions.styl
@@ -16,7 +16,7 @@ lighten(color)
 form input
   size = 5px
   background lighten(#fff)
-  border-radius size
+  border-radius(size)
   pad(size, size * 2)
 
 a
