Added more type() tests

--- a/test/integration/tests/bifs.type.css
+++ b/test/integration/tests/bifs.type.css
@@ -4,4 +4,7 @@ body {
   background: "unit";
   background: "hsla";
   background: "color";
+  background: "ident";
+  background: "unit";
+  background: "function";
 }
