--- a/test/integration/tests/selectors.nested.css
+++ b/test/integration/tests/selectors.nested.css
@@ -2,8 +2,13 @@ form .foo {
   color: #000;
 }
 form .foo .bar {
+  padding: 5px;
   color: #f00;
 }
 body .foo .bar {
   display: none;
+}
+.foo .baz .raz,
+.bar .baz .raz {
+  something: "else";
 }
