Added failing variable test

--- a/test/integration/tests/variables.styl
+++ b/test/integration/tests/variables.styl
@@ -1,6 +1,7 @@
 
 size = 14px
 font-family = 'Lucida Grande', Arial, sans-serif
+type = solid
 
 body
   font size font-family
@@ -9,3 +10,4 @@ body
 
 a
   font 11px Impact, font-family, serif
+  border 1px type #fff
