Fixed ident as atoms. Closes #59
Stack#lookup() now defaults to the ident itself if it
cannot continue to resolve, to say a function

--- a/test/integration/tests/operators.styl
+++ b/test/integration/tests/operators.styl
@@ -78,3 +78,12 @@ body
   
   // true
   foo 1 != 5
+  
+  // true
+  foo wahoo == wahoo
+  
+  // false
+  foo wahoo == something
+  
+  // true
+  foo wahoo != something
