--- a/test/integration/tests/bifs.lookup.complex.styl
+++ b/test/integration/tests/bifs.lookup.complex.styl
@@ -1,4 +1,5 @@
 
+border-type = solid
 dark-blue = #006269
 light-blue = dark-blue + hsl(0,0,50%)
 
@@ -7,3 +8,4 @@ light(color-name)
 
 body
   color light('blue')
+  border 1px lookup('border-type') red
