--- a/test/integration/tests/bifs.type.styl
+++ b/test/integration/tests/bifs.type.styl
@@ -1,4 +1,5 @@
 body
+  border-type = solid
   size = 15px
   background type('test')
   background type(12px)
@@ -8,3 +9,4 @@ body
   background type(something)
   background type(size)
   background type(type)
+  background type(border-type)
