More unquote() tests

--- a/test/integration/tests/bifs.unquote.styl
+++ b/test/integration/tests/bifs.unquote.styl
@@ -1,3 +1,8 @@
+
+line-height(n)
+  unquote('/ ' + n)
+
 body
   background unquote(testing)
   background unquote('testing')
+  font 14px line-height(1.5)
