Added nested implicit return test

--- a/test/integration/tests/functions.return.styl
+++ b/test/integration/tests/functions.return.styl
@@ -7,6 +7,24 @@ large(n)
   else
     no
 
+awesome()
+  yes
+
+nested()
+  a = 5
+  if a is a 'unit'
+    b = 10
+    if a
+      c = 100
+      c = 100
+      c = 100
+      c = 100
+      awesome()
+    else
+      'b is not a unit'
+  else
+    'a is not a unit'
+
 body
   // no
   foo large(15)
@@ -16,3 +34,6 @@ body
 
   // false
   foo large('string')
+  
+  // yes
+  foo nested()
