more return tests

--- a/test/integration/tests/functions.return.styl
+++ b/test/integration/tests/functions.return.styl
@@ -24,6 +24,11 @@ nested(a = 5)
   else
     'a is not a unit'
 
+set()
+  1
+  return 2
+  3
+
 body
   // no
   foo large(15)
@@ -39,3 +44,6 @@ body
   
   // 'a is not a unit'
   foo nested('wahoo')
+
+  // 2
+  foo set()
