--- a/test/integration/tests/function.literals.styl
+++ b/test/integration/tests/function.literals.styl
@@ -2,6 +2,11 @@
 something(arg)
   bar arg arg
 
+recurse()
+  foo recurse
+  foo recurse
+
 body
   foo bar(1px, baz(5px))
   something(baz(5px))
+  recurse()
