special-case binary - against an ident
we treat it as an unary on the right-hand op, so that:

   foo -15px

is not treated as (foo - 15px)

might be a good idea to even consider - with no trailing
space an unary at all times, and demand space for binary

--- a/test/integration/tests/arithmetic.unary.css
+++ b/test/integration/tests/arithmetic.unary.css
@@ -8,3 +8,7 @@ h1#logo {
   foo: false;
   foo: false;
 }
+body {
+  text-indent: -99999px;
+  background: #fff url("/some/image.png") no-repeat -29px 1px;
+}
