--- a/test/integration/tests/arithmetic.unary.styl
+++ b/test/integration/tests/arithmetic.unary.styl
@@ -8,3 +8,7 @@ h1#logo
   foo !99
   foo !((99))
   foo not not 0
+
+body
+  text-indent -99999px
+  background #fff url('/some/image.png') no-repeat -29px 1px
