More mixin tests

--- a/test/integration/tests/mixins.complex.css
+++ b/test/integration/tests/mixins.complex.css
@@ -18,3 +18,10 @@ ul li:first-child {
   display: inline-block;
   vertical-align: middle;
 }
+body {
+  padding: 5px;
+}
+body {
+  padding: 5px;
+  margin: 5px;
+}
