--- a/test/integration/tests/mixins.complex.styl
+++ b/test/integration/tests/mixins.complex.styl
@@ -28,7 +28,7 @@ pad(pad = false, margin = false)
     padding 5px
   if margin
     margin 5px
-  if not pad
+  if not pad and not margin
     did nothing
 
 body
