--- a/test/integration/tests/operators.styl
+++ b/test/integration/tests/operators.styl
@@ -69,3 +69,8 @@ body
 
   // 5
   foo not false and not false and 5
+  
+  // true
+  foo !!5 == true or !!0 == false
+  foo !!5 == false or !!0 == false
+
