more op prec tests

--- a/test/integration/tests/operators.precedence.styl
+++ b/test/integration/tests/operators.precedence.styl
@@ -58,6 +58,9 @@ body
 
 body
   // true
+  foo 5 > 4 is a 'boolean'
+
+  // true
   foo not not not (bar is defined)
   foo not not not bar is defined
 
