Fixed operator tests due to not change

--- a/test/integration/tests/operators.styl
+++ b/test/integration/tests/operators.styl
@@ -68,7 +68,7 @@ body
   foo true and 1 or 5
 
   // 5
-  foo not false and not false and 5
+  foo !false and !false and 5
   
   // true
   foo !!5 == true or !!0 == false
