--- a/test/integration/tests/operators.precedence.styl
+++ b/test/integration/tests/operators.precedence.styl
@@ -6,19 +6,19 @@ body
   // -5px
   foo ---5px
   // 2
-  foo (not not not 5) or 2
-  foo not not not 5 or 2
+  foo (!!!5) or 2
+  foo !!!5 or 2
 
 
 body
   // true
-  foo not (not 5)
-  foo not not 5
+  foo !(! 5)
+  foo !!5
 
 body
   // 5
-  foo (not false) and (not false) and 5
-  foo not false and not false and 5
+  foo (! false) and (! false) and 5
+  foo ! false and ! false and 5
 
 body
   // true
@@ -41,13 +41,13 @@ body
 
 body
   // true
-  foo not (5 < 10 ? 0 : 1)
+  foo !(5 < 10 ? 0 : 1)
   // false
-  foo not (5 > 10 ? 0 : 1)
+  foo !(5 > 10 ? 0 : 1)
   // wahoo
-  foo not not 1 ? wahoo : fail
+  foo !! 1 ? wahoo : fail
   // fail
-  foo not 1 ? wahoo : fail
+  foo !1 ? wahoo : fail
 
 body
   foo = 'test'
