--- a/examples/mixins/box.styl
+++ b/examples/mixins/box.styl
@@ -1,11 +1,11 @@
 
-pad(@x, @y = @x)
-  padding @y @x @y @x
+pad(x, y = x)
+  padding y x y x
 
-pad-x(@n)
-  padding-left @n
-  padding-right @n
+pad-x(n)
+  padding-left n
+  padding-right n
 
-pad-y(@n)
-  padding-top @n
-  padding-bottom @n
+pad-y(n)
+  padding-top n
+  padding-bottom n
