Added tests for previous commit

--- a/test/integration/tests/if.css
+++ b/test/integration/tests/if.css
@@ -22,3 +22,13 @@ body {
   foo: zero;
   foo: invalid;
 }
+body .input {
+  padding: 5px;
+  no: margin;
+}
+body .nested {
+  foo: bar;
+}
+body .nested .hidden {
+  display: none;
+}
