Equality ops return false when coercion fails. Closes #78

--- a/test/integration/tests/operators.styl
+++ b/test/integration/tests/operators.styl
@@ -73,4 +73,12 @@ body
   // true
   foo !!5 == true or !!0 == false
   foo !!5 == false or !!0 == false
+  
+  // true
+  foo wahoo == wahoo
+  
+  // false
+  foo 0 == true
+  foo true == 0
+  foo #fff == undefined
 
