Fixed length() with none-tuple

--- a/test/integration/tests/bifs.length.styl
+++ b/test/integration/tests/bifs.length.styl
@@ -4,6 +4,9 @@ padding(n, margin = false)
   foo length((1 2))
   foo length((1))
   foo length(())
+  foo length(1 2 3)
+  foo length(1)
+  foo length()
   padding n
   margin margin
 
