--- a/test/integration/tests/operators.css
+++ b/test/integration/tests/operators.css
@@ -29,3 +29,12 @@ body {
   foo: false;
   foo: false;
 }
+body {
+  foo: true;
+  foo: 1;
+  foo: 2;
+  foo: 3;
+  foo: true;
+  foo: true;
+  foo: true;
+}
