--- a/test/integration/tests/operators.subscript.styl
+++ b/test/integration/tests/operators.subscript.styl
@@ -7,3 +7,6 @@ body
   foo (1 2 3)[3] == null
   foo (1 2 3)[-1] == null
   foo (1 2 3)['test'] == null
+  foo !(1 0)[1]
+  foo !(1 0)[0]
+  foo - - -(1 2 3 4 5)[4]
