Added image-size() example

--- a/examples/js-functions.styl
+++ b/examples/js-functions.styl
@@ -2,3 +2,8 @@
 body
   font add(5px, 10px)
   font sub(5px, 10px)
+  // 337 273
+  size = image-size('images/jesus.gif')
+  dimensions size
+  width size[0]
+  height size[1]
