Fixed some tests due to prev commit

--- a/test/integration/tests/operator.range.styl
+++ b/test/integration/tests/operator.range.styl
@@ -3,7 +3,7 @@ body
   foo range
   foo range[0]
   foo range[1]
-  foo range[2]
+  foo range[2] == null
   foo range[1222] == null
   foo 1..3
   foo 1...3
