--- a/test/integration/tests/operator.range.css
+++ b/test/integration/tests/operator.range.css
@@ -1,8 +1,8 @@
 body {
   foo: 1 2 3 4 5 6 7 8 9 10;
-  foo: 1;
-  foo: 2;
-  foo: 3;
+  foo: 1 2 3 4 5;
+  foo: 6 7 8 9 10;
+  foo: true;
   foo: true;
   foo: 1 2 3;
   foo: 1 2;
