--- a/examples/js-functions.styl
+++ b/examples/js-functions.styl
@@ -2,16 +2,20 @@
 // image-size(img) -> (width height)
 
 image-size(img)
-  (image-width(img) image-height(img))
+  w = image-width(img)
+  h = image-height(img)
+  (w h)
 
 body
   font add(5px, 10px)
   font sub(5px, 10px)
-  
+
+#jesus
   // 337 273
   width image-width('images/jesus.gif')
   height image-height('images/jesus.gif')
-  
+
+#jesus-2
   size = image-size('images/jesus.gif')
   width size[0]
   height size[1]
