--- a/examples/js-functions.styl
+++ b/examples/js-functions.styl
@@ -17,4 +17,5 @@ body
 
 #jesus-2
   width image-size('images/jesus.gif')[0]
-  width image-size('images/jesus.gif')[1]
+  height image-size('images/jesus.gif')[1]
+
