Special-case [] operator on ident

--- a/examples/js-functions.styl
+++ b/examples/js-functions.styl
@@ -11,7 +11,6 @@ body
   font sub(5px, 10px)
 
 #jesus
-  // 337 273
   width image-width('images/jesus.gif')
   height image-height('images/jesus.gif')
 
@@ -19,3 +18,7 @@ body
   width image-size('images/jesus.gif')[0]
   height image-size('images/jesus.gif')[1]
 
+#jesus-3
+  size = image-size('images/jesus.gif')
+  width size[0]
+  height size[1]
