--- a/test/integration/tests/operators.subscript.styl
+++ b/test/integration/tests/operators.subscript.styl
@@ -38,14 +38,14 @@ body
   foo size(5, 10)[0]
 
 body
-  nums = (1 2 3) (4 5 6)
+  nums = ((1 2 3) (4 5 6))
   foo nums[0]
   foo nums[0][0]
   foo nums[0][1]
   foo nums[0][2]
   foo nums[1][2]
   
-  foo (nums)[0][0][0]
+  foo (nums)[0][0][0][0]
 
 size()
   (1 2) (3 4)
