--- a/test/integration/tests/operator.range.styl
+++ b/test/integration/tests/operator.range.styl
@@ -1,9 +1,12 @@
 body
   range = 1..5 6..10
+  range2 = (1..5 6..10)
   foo range
   foo range[0]
   foo range[1]
-  foo range[2] == null
+  foo range2[0]
+  foo range2[1]
+  foo range2[2] == null
   foo range[1222] == null
   foo 1..3
   foo 1...3
