--- a/test/integration/tests/mixins.nested.css
+++ b/test/integration/tests/mixins.nested.css
@@ -8,3 +8,14 @@ body .foo {
 body .foo .bar {
   color: "bar";
 }
+body {
+  one: 1;
+  two: 2;
+  three: 3;
+}
+body with some nesting {
+  four: 4;
+}
+body with some nesting even more {
+  five: 5;
+}
