Fixed comments in selectors. Closes #94

--- a/test/integration/tests/comments.styl
+++ b/test/integration/tests/comments.styl
@@ -11,9 +11,6 @@ body
   // background green
 
 form
-  /*
-  woot
-  */
   background white
 
 /*
@@ -24,3 +21,8 @@ body
 
 */
 // rawr
+
+html>/**/body select
+x:-moz-any-link
+x:default select
+  font-weight bold !important
