--- a/test/integration/tests/comments.css
+++ b/test/integration/tests/comments.css
@@ -4,3 +4,8 @@ body {
 form {
   background: #fff;
 }
+html>/**/body select,
+x:-moz-any-link,
+x:default select {
+  font-weight: bold !important;
+}
