--- a/test/integration/tests/vargs.styl
+++ b/test/integration/tests/vargs.styl
@@ -38,3 +38,12 @@ padding(args...)
 body
   padding 1px
   padding 1px 2px
+
+padding(args...)
+  pad args[0]
+  pad args[1]
+  pad args[2]
+  len length(args)
+
+body
+  padding 1 2 (3 4 5)
