--- a/test/integration/tests/operators.subscript.styl
+++ b/test/integration/tests/operators.subscript.styl
@@ -55,3 +55,42 @@ body
   foo size()[1]
   foo size()[1][1]
   foo ((size()[1]))[0][0][1]
+
+image-size(path)
+  w = 100
+  h = 200
+  return w h
+
+body
+  size = image-size('test.png')
+  foo size
+  foo size[0]
+  foo size[1]
+  //foo length(size)
+
+image-size(path)
+  100 200
+
+body
+  size = image-size('test.png')
+  foo size
+  foo size[0]
+  foo size[1]
+  //foo length(size)
+
+size = 100 200
+
+body
+  foo size
+  foo size[0]
+  foo size[1]
+  //foo length(size)
+
+size = (100 200)
+
+body
+  foo size
+  foo size[0]
+  foo size[1]
+  //foo length(size)
+
