--- a/test/integration/tests/operator.range.styl
+++ b/test/integration/tests/operator.range.styl
@@ -1,12 +1,18 @@
 body
-  range = 1..5 6..10
-  range2 = (1..5 6..10)
-  foo range
-  foo range[0]
-  foo range[1]
-  foo range2[0]
-  foo range2[1]
-  foo range2[2] == null
-  foo range[1222] == null
-  foo 1..3
-  foo 1...3
+  small = 1..5
+  large = (1..5) (6..10)
+  
+  foo small
+  foo large
+  
+  foo small[0]
+  foo large[0]
+  
+  foo length(small)
+  foo length(large)
+
+  foo small[length(small) - 1]
+  foo large[length(large) - 1]
+  
+  foo small[-1] == null
+  foo small[123123] == null
