--- a/test/integration/tests/for.styl
+++ b/test/integration/tests/for.styl
@@ -1,7 +1,7 @@
 
 test(args...)
   test-args args
-  each arg in args
+  for arg in args
     foo arg
 
 size(a, b)
@@ -14,25 +14,25 @@ body
 
 body
   sizes = size(1, 2) size(3, 4)
-  each size in sizes
+  for size in sizes
     foo size
 
 body
-  each n in 1..5
+  for n in 1..5
     foo n
 
 body
-  each n in 1 2 3
+  for n in 1 2 3
     foo n
 
 body
-  each n in 1 2 3
+  for n in 1 2 3
     foo
       bar n
 
 test(args...)
   foo
-    each arg in args
+    for arg in args
       bar
         baz arg
 
@@ -40,5 +40,5 @@ body
   test 1 2 3
 
 body
-  each val, index in foo bar baz
+  for val, index in foo bar baz
     foo index val
