--- a/test/integration/tests/mixins.nested.css
+++ b/test/integration/tests/mixins.nested.css
@@ -1,21 +1,7 @@
 body {
-  padding: 5px;
-  color: "bar";
-}
-body .foo {
-  color: "bar";
-}
-body .foo .bar {
-  color: "bar";
-}
-body {
   one: 1;
-  two: 2;
-  three: 3;
-}
-body with some nesting {
-  four: 4;
-}
-body with some nesting even more {
-  five: 5;
+  -two: 1 b c;
+  two: 1 2;
+  -three: 1 2 c;
+  three: 1 2 3;
 }
