--- a/test/integration/tests/mixins.nested.styl
+++ b/test/integration/tests/mixins.nested.styl
@@ -1,31 +1,14 @@
 
-mixin(n)
-  padding n
-  var = 'bar'
-  color var
-  .foo
-    color var
-    .bar
-      color var
-
-body
-  foo = 'foo'
-  mixin(5px)
-
-three(n)
-  three n
-  with some nesting
-    four n = n + 1
-    even more
-      five n + 1
-
-two(n)
-  two n
-  three(n + 1)
-
-one(n)
-  one n
-  two(n + 1)
+one(a)
+  one a
+  two(b)
+    two a b
+    three(c)
+      three a b c
+    three(3)
+    -three a b c
+  two(2)
+  -two a b c
 
 body
   one(1)
