--- a/examples/arithmetic.styl
+++ b/examples/arithmetic.styl
@@ -6,7 +6,7 @@ width = 800px
 pad = 20px
 
 body
-  font font-size/1.5 font-families
+  font font-size\/1.5 font-families
   background white
   color primary-color
 
