Fixed builtin examples

--- a/examples/builtins.styl
+++ b/examples/builtins.styl
@@ -21,7 +21,8 @@ body
   foo type('test')
   
   // 15deg
-  hue hue(hsl(#FF6633))
+  foo hsl(#ff6633)
+  foo hue(hsl(#FF6633))
   // 100%
   sat saturation(hsl(#FF6633))
   // 60%
