--- a/examples/implicit-functions.styl
+++ b/examples/implicit-functions.styl
@@ -1,8 +1,8 @@
 
-border-radius(size)
-  -webkit-border-radius size
-  -moz-border-radius size
-  border-radius size
+border-radius(args...)
+  -webkit-border-radius args
+  -moz-border-radius args
+  border-radius args
 
 form
   border-radius 5px
