--- a/assets/index.jade
+++ b/assets/index.jade
@@ -4,5 +4,9 @@ html
     title Stylus
     link(rel='stylesheet', href='main.css')
   body
-    h1 Test
-    a.button Visit
+    h1 Stylus
+    p.tagline 
+      em.expressive Expressive, 
+      em.dynamic dynamic, 
+      em.robust robust 
+      em.css CSS
