--- a/assets/main.styl
+++ b/assets/main.styl
@@ -3,6 +3,42 @@ large = 60px
 small = 14px
 dark-gray = #2C2C2C
 
+button()
+  background #e3e3e3
+  border 1px solid #bbb
+  -moz-border-radius 3px
+  -webkit-border-radius 3px
+  -webkit-user-select none
+  border-radius 3px
+  -moz-box-shadow inset 0 0 1px 1px #f6f6f6
+  -webkit-box-shadow inset 0 0 1px 1px #f6f6f6
+  box-shadow inset 0 0 1px 1px #f6f6f6
+  color #333
+  font-family "helvetica neue", helvetica, arial, sans-serif
+  font-size 12px
+  font-weight bold
+  line-height 1
+  display block
+  padding 8px 0 9px
+  text-align center
+  text-shadow 0 1px 0 #fff
+  width 150px
+
+  &:hover
+    background #d9d9d9
+    -moz-box-shadow inset 0 0 1px 1px #eaeaea
+    -webkit-box-shadow inset 0 0 1px 1px #eaeaea
+    box-shadow inset 0 0 1px 1px #eaeaea
+    color #222
+    cursor pointer
+
+  &:active
+    background #d0d0d0
+    -moz-box-shadow inset 0 0 1px 1px #e3e3e3
+    -webkit-box-shadow inset 0 0 1px 1px #e3e3e3
+    box-shadow inset 0 0 1px 1px #e3e3e3
+    color #000
+
 body
   padding 50px
   font small 'helvetica neue', helvetica, arial, sans-serif
@@ -25,3 +61,9 @@ h1
       color lighten(dark-gray, 40%)
     &.css
       color lighten(dark-gray, 60%)
+
+#content
+  margin 25px 0
+
+a.button
+  button()
