--- a/assets/main.styl
+++ b/assets/main.styl
@@ -3,26 +3,34 @@ large = 60px
 small = 14px
 dark-gray = #2C2C2C
 
-button()
-  background #e3e3e3
-  border 1px solid #bbb
-  -moz-border-radius 3px
-  -webkit-border-radius 3px
-  -webkit-user-select none
-  border-radius 3px
-  -moz-box-shadow inset 0 0 1px 1px #f6f6f6
-  -webkit-box-shadow inset 0 0 1px 1px #f6f6f6
-  box-shadow inset 0 0 1px 1px #f6f6f6
-  color #333
-  font-family "helvetica neue", helvetica, arial, sans-serif
-  font-size 12px
-  font-weight bold
-  line-height 1
+border-radius(args...)
+  -webkit-border-radius args
+  -moz-border-radius args
+  border-radius args
+
+user-select(type)
+  -webkit-user-select type
+
+box-shadow(args...)
+  -moz-box-shadow args
+  -webkit-box-shadow args
+  box-shadow args
+
+button(font-size = 12px)
   display block
   padding 8px 0 9px
-  text-align center
+  background #e3e3e3
+  border 1px solid #bbb
+  border-radius 3px
+  box-shadow inset 0 0 1px 1px #f6f6f6
   text-shadow 0 1px 0 #fff
+  font-size font-size
+  font-weight bold
+  line-height 1
+  text-align center
+  user-select none
   width 150px
+  color #333
 
   &:hover
     background #d9d9d9
